--- a/shopify_ai_embedding.ipynb
+++ b/shopify_ai_embedding.ipynb
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "2Vnf_0sduUSf"
       },
@@ -76,12 +76,12 @@
     {
       "cell_type": "code",
       "source": [
-        "os.environ[\"OPENAI_API_KEY\"] = \"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\""
+        "os.environ[\"OPENAI_API_KEY\"] = \"\""
       ],
       "metadata": {
         "id": "l_brc4OGa1SO"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
       "metadata": {
         "id": "CBBataFV3bPX"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -136,7 +136,7 @@
       "metadata": {
         "id": "04leFBlQ3UGb"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -149,7 +149,7 @@
       "metadata": {
         "id": "eVl07_MDRPsx"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -160,7 +160,7 @@
       "metadata": {
         "id": "D_zB_sVs4lS4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -171,7 +171,7 @@
       "metadata": {
         "id": "JtulZISr9B8d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -201,7 +201,7 @@
       "metadata": {
         "id": "jFEFHiJ3wlHb"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "P0pBveixvCTL"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -225,7 +225,7 @@
       "metadata": {
         "id": "Wf7Biu8vvld8"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -288,7 +288,7 @@
       "metadata": {
         "id": "L20lxZfMwWf2"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -303,7 +303,7 @@
         },
         "outputId": "e3119228-3e04-4fc1-da44-cc1670842f9e"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -328,7 +328,7 @@
       "metadata": {
         "id": "SKJuKlFoxe2E"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -341,7 +341,7 @@
       "metadata": {
         "id": "Sh4PI9Vsx6Jj"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -367,7 +367,7 @@
       "metadata": {
         "id": "ZnIy_ngHyEI-"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -403,7 +403,7 @@
       "metadata": {
         "id": "bgSJSrq9zvV2"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -437,7 +437,7 @@
       "metadata": {
         "id": "GaD0mGvEGF4P"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -457,7 +457,7 @@
       "metadata": {
         "id": "4MThtFLdGYtq"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -474,7 +474,7 @@
         "id": "DRC0KL_oGd7q",
         "outputId": "3532843c-cf1b-45ef-8294-a96a0977afee"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -504,7 +504,7 @@
         "id": "6UxhtOjJTNB6",
         "outputId": "406dc048-b63b-4f01-f473-acdbe0df7913"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
